# research-template

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: python-ci.yml
data/: README.md
src/project_name/: __init__.py
tests/: test_smoke.py
